# onion

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  ecs.rs  lib.rs  main.rs  schedule.rs
src/graphics/: camera.rs  context.rs  cube.rs  fs.rs  mod.rs  shape.rs  texture.rs  vertex.rs  vs.rs
src/graphics/pipelines/: basic.rs  ddd.rs  line.rs  mod.rs  texture.rs
src/graphics/render_pass/: basic.rs  mod.rs  msaa.rs  overlay.rs
src/graphics/shaders/: shader.frag.glsl  shader.vert.glsl
src/netcode/: mod.rs  netcode.rs  replay.rs  tests.rs
